# youtube-file-processor

./: .terraform.lock.hcl  README.md  deploy.dev.sh  locals.tf  main.tf  provider.tf  setup.dev.sh  variable.tf  variables.dev.tfvars
functions/cron-function/: function_app.py  host.json  main.py
functions/function-edge-rust/: .env  .funcignore  Cargo.toml  host.json  local.settings.json  setup.sh
functions/function-edge-rust/apiHealth/: function.json
functions/function-edge-rust/eventGridTrigger/: function.json
functions/function-edge-rust/src/: main.rs
functions/function-edge-rust/src/utils/: api.rs  db.rs  jwt.rs  middleware.rs  mod.rs  models.rs  types.rs
modules/custom-function/: main.tf  outputs.tf  variables.tf
modules/python-function/: main.tf  outputs.tf  variables.tf
modules/resource-group/: README.md  main.tf  variables.tf
modules/topic-subscription/: main.tf  variables.tf
