[package]
name = "edge_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.6"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# warp dependencies
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
warp = "0.3"
reqwest = "0.11"
jsonwebtokens = "1.2.0"
mysql = "25.0.1"
azure_storage_blobs = "0.20.0"
futures = "0.3.30"
azure_core = "0.20.0"
azure_storage = "0.20.0"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
